# SwedishFighterEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Engine.cpp  Geometry.cpp  Geometry.h  MathOperations.cpp  README.md  SimpleExample.cpp  SimpleExample.h  SwedishFighterEngine.sln  SwedishFighterEngine.vcxproj
MissileTrajectoryCalculation/: CMakeLists.txt  Missile.cpp  Missile.h
cmake/: toolchain-mingw.cmake  toolchain_clang.cmake  toolchain_msvc.cmake
include/: Missile.h
include/alpha/: alpha.h  alphazone.h  inducing.h
include/beta/: beta.h
include/concurrency/: concurrency.h
include/gamma/: gamma.h
src/Math/: MathOperations.h  MissileGeometry.cpp  MissileGeometry.h
src/MissileTrajectoryCalculation/: CMakeLists.txt  Missile.cpp  Missile.h
src/alpha/: CMakeLists.txt  alpha.cpp  alphazone.cpp
src/beta/: CMakeLists.txt  beta.cpp
src/concurrency/: CMakeLists.txt  concurrency.cpp
src/gamma/: CMakeLists.txt  gamma.cpp
